# computer-science-algorithms

./: .gitignore  README.md  contributors.txt
Bash Command Executor/: CMakeLists.txt  Executor.cc  Executor.h  README.md  main.cpp
Graph Traverser/: CMakeLists.txt  Graph.hpp  README.md  Tester.hpp  Traversal.hpp  main.cpp
Max Flow/Hamming Distance/: CMakeLists.txt  README.md
Max Flow/Hamming Distance/src/: CMakeLists.txt  Solver.cc  Solver.h  main.cpp
Max Flow/Hamming Distance/test/: gtest.cpp
Max Flow/Max Flow Problem/: CMakeLists.txt  README.md
Max Flow/Max Flow Problem/src/: CMakeLists.txt  Graph.cc  Graph.h  main.cpp
Max Flow/Max Flow Problem/test/: gtest.cpp  samples.h
Minimum Spanning Tree/: CMakeLists.txt  README.md
Minimum Spanning Tree/src/: BoruvkaMSTFinder.hpp  CMakeLists.txt  DisjointSetUnion.cc  DisjointSetUnion.h  Edge.hpp  Graph.hpp  KruskalMSTFinder.hpp  MinSpanningTreeFinderInterface.hpp  PrimMSTFinder.hpp  main.cpp
Minimum Spanning Tree/test/: CMakeLists.txt  gtest.cpp  samples.h
Shortest Paths/Distance Calculator/: CMakeLists.txt  DistanceCalculator.hpp  GraphStorageFactory.hpp  README.md  main.cpp  statements.txt
Shortest Paths/Puzzle Solver/: CMakeLists.txt  CostInterface.h  CoveredCost.cc  CoveredCost.h  GameState.cc  GameState.h  HeuristicInterface.h  ManhattanHeuristic.cc  ManhattanHeuristic.h  PuzzleSolver.cc  PuzzleSolver.h  README.md  main.cpp  statements.txt
Shortest Paths/Trade Arbitrage/: CMakeLists.txt  README.md  TradeArbitrageSolver.cc  TradeArbitrageSolver.h  main.cpp  statements.txt
Strings/Distinct Substring Counter/: CMakeLists.txt  DistinctSubstringCounter.cc  README.md  SuffixArray.cc  SuffixArray.h  main.cpp
Strings/Distinct Substring Counter/src/: CMakeLists.txt  DistinctSubstringCounter.h
Strings/Distinct Substring Counter/test/: CMakeLists.txt  gtest.cpp
Strings/Pattern Matching/: README.md
Strings/Pattern Matching with Wildcards/: README.md
Strings/Pattern Matching with Wildcards/src/: CMakeLists.txt  DeterministicFiniteAutomaton.cc  DeterministicFiniteAutomaton.h  Solver.cc  Solver.h  Trie.cc  Trie.h  main.cpp
Strings/Pattern Matching with Wildcards/test/: gtest.cpp
Strings/Pattern Matching/src/: CMakeLists.txt  PatternMatcher.cc  PatternMatcher.h  main.cpp
Strings/Pattern Matching/test/: gtest.cpp
Strings/String Transformation/: README.md
Strings/String Transformation/src/: CMakeLists.txt  Transformer.cc  Transformer.h  main.cpp
Strings/String Transformation/test/: gtest.cpp
Trees/Second Statistics/: README.md
Trees/Second Statistics/src/: CMakeLists.txt  SegmentTree.cc  SegmentTree.h  main.cpp
Trees/Second Statistics/test/: gtest.cpp
Trees/Tree Comparator/: README.md
Trees/Tree Comparator/src/: BinarySearchTree.cc  BinarySearchTree.h  CMakeLists.txt  CartesianTree.cc  CartesianTree.h  main.cpp
Trees/Tree Comparator/test/: gtest.cpp
